# llm_web

./: Cargo.toml
candle-lora/src/: lib.rs  loraembed.rs  loralinear.rs
demo/: Cargo.toml
demo/config/: llm.toml
demo/src/: error.rs  main.rs  settings.rs  utility.rs
demo/src/llm/: load_llm.rs  mod.rs  predict.rs
demo/src/llm/models/: llama copy.rs  llama.rs  mod.rs
demo/src/llm/models/lora/: llama_lora copy.rs
demo/src/routes/: mod copy.rs  routes_api.rs
src/: error.rs  main copy.rs  main.rs
src/candle_lora/: frozenconv.rs  frozenembed.rs  frozenlinear.rs  loraconv1d.rs  loraconv2d.rs  loraembed.rs  loralinear.rs
src/llm/: generation.rs  load_llm.rs  mod.rs  predict.rs  token_output_stream.rs  util.rs
src/llm/models/: with_tracing.rs  yi.rs
src/llm/models/lora/: llama_lora.rs  mod.rs
src/middleware/: cors.rs
src/routes/: mod.rs  routes_api.rs
